--- a/me.html
+++ b/me.html
@@ -73,11 +73,12 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="index.html#home" title="home">Home</a></li>
+                <li><a href="index.html" title="home">Home</a></li>
                 <li class="current"><a href="#" title="about">About</a></li>
                 <li><a href="portfolio.html" title="works">Work</a></li>
-                <li><a class="smoothscroll"  href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
                 <li><a href="scrapbook.html" title="scrapbook">Scrapbook</a></li>
+                <li><a   href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
+
             </ul>
         </nav>
 
@@ -126,7 +127,7 @@
             </div><!-- end blog-content__main -->
 
 
-        
+
 
     </article>
 
