--- a/portfolio.html
+++ b/portfolio.html
@@ -83,9 +83,9 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="index.html#home" title="home">Home</a></li>
-                <li><a href="about.html" title="about">Me</a></li>
-                <li class="current"><a href="portfolio.html" title="Portfolio">work</a></li>
+                <li><a href="index.html" title="home">Home</a></li>
+                <li><a href="me.html" title="about">About</a></li>
+                <li class="current"><a href="#" title="Portfolio">work</a></li>
                 <li><a href="scrapbook.html"  title="Scapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
