--- a/scrapbook.html
+++ b/scrapbook.html
@@ -78,7 +78,8 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="about.html"  title="about">Me</a></li>
+                <li><a href="index.html" title="home">Home</a></li>
+                <li><a href="me.html"  title="about">About</a></li>
                 <li><a href="portfolio.html" title="works">Work</a></li>
                 <li class="current"><a href="#" title="scrapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
