--- a/offline.html
+++ b/offline.html
@@ -42,13 +42,14 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
     <!-- CSS
     ================================================== -->
     <link rel="preload" href="css/fonts.css" as="style" />
-    <link rel="preload" href="css/iconic/css/iconmonstr-iconic-font.min.css" as="style" />
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/iconic/css/iconmonstr-iconic-font.min.css"/>
+    <link rel="stylesheet" href="css/base.min.css">
+    <link rel="stylesheet" href="css/vendor.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
 
 
     <!-- script
@@ -63,10 +64,9 @@
     ================================================== -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-    <!-- Cookie consent
-    ================================================== -->
 
-<link rel="stylesheet" type="text/css" href="//wpcc.io/lib/1.0.2/cookieconsent.min.css"/><script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script><script>window.addEventListener("load", function(){window.wpcc.init({"colors":{"popup":{"background":"#000000","text":"#ffffff","border":"#ffffff"},"button":{"background":"#ffffff","text":"#000000"}},"position":"bottom","border":"normal","corners":"normal","transparency":"5","content":{"href":"https://www.dum3bi.com/cookie-policy"}})});</script>
+
+
 </head>
 
 <body id="top">
@@ -81,9 +81,9 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="about.html" target="_blank" title="about">Me</a></li>
-                <li><a class="smoothscroll"  href="#portfolio" title="works">Projects</a></li>
-                <li><a href="scrapbook.html" target="_blank" title="Scapbook">Scrapbook</a></li>
+                <li><a href="me.html"  title="about">About</a></li>
+                <li><a href="portfolio.html" title="works">Work</a></li>
+                <li><a href="scrapbook.html" title="Scapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
         </nav>
@@ -95,7 +95,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+   <section id="home" class="s-home page-hero target-section" >
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
@@ -110,38 +110,17 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 I design beautiful experiences & mentor designers.
+                 Head of Design at Big Cabal Media.<br>
+                 I lead teams that design brands, products, and experiences.
                </h1>
              </div>
 
-             <div class="home-content__scroll">
-                 <a href="#about" class="scroll-link smoothscroll">
-                     <span>Scroll Down</span>
-                 </a>
-             </div>
+
 
 
             </div>
 
         </div> <!-- end home-content -->
-
-        <ul class="home-social">
-             <li>
-                <a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
-            </li>
-            <li>
-                <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
-            </li>
-            <li>
-                <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
-            </li>
-            <li>
-                <a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
-            </li>
-
-
-        </ul>
-        <!-- end home-social -->
 
     </section> <!-- end s-home -->
 
@@ -149,290 +128,8 @@
 
 
 
-    <!-- works
-    ================================================== -->
 
-    <section id="portfolio" class="s-works target-section">
 
-        <div class="row narrow section-intro has-bottom-sep">
-            <div class="col-full">
-                <h3>Portfolio</h3>
-                <h1>My Latest Projects.</h1>
-
-                <p style="text-align:center;" class="lead">“You might see me with my hoody up, I ain't leaving 'til I finish.” <br>
-                                    -NF</p>
-            </div>
-        </div>
-        <div class="row portfolio-content">
-
-    <div class="col-twelve">
-
-      <!-- portfolio-wrapper -->
-         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-
-           <div class="bgrid folio-item">
-              <div class="item-wrap">
-               <img src="images/portfolio/gallery/OneBank.jpg" alt="OneBank Movie poster design" class="lazyload">
-                 <a href="#modal-05" class="overlay">
-                    <div class="folio-item-table">
-                     <div class="folio-item-cell">
-                       <h3 class="folio-title">OneBank</h3>
-                     <span class="folio-types">
-                         Brand & Marketing Design
-                     </span>
-                  </div>
-                    </div>
-                 </a>
-              </div>
-           </div> <!-- /folio-item -->
-
-           <div class="bgrid folio-item">
-              <div class="item-wrap">
-               <img src="images\portfolio\gallery\Budweiser.jpg" alt="Budweiser bottle with floating cap" class="lazyload">
-                 <a href="#modal-04" class="overlay">
-                    <div class="folio-item-table">
-                     <div class="folio-item-cell">
-                       <h3 class="folio-title">Budweiser</h3>
-                     <span class="folio-types">
-                         Brand & Marketing Design
-                     </span>
-                  </div>
-                    </div>
-                 </a>
-              </div>
-           </div> <!-- /folio-item -->
-
-           <div class="bgrid folio-item">
-              <div class="item-wrap">
-               <img src="images\portfolio\gallery\Nivea.jpg" alt="Nivea men flatlay" class="lazyload">
-                 <a href="#modal-06" class="overlay">
-                    <div class="folio-item-table">
-                     <div class="folio-item-cell">
-                       <h3 class="folio-title">NIVEA MEN</h3>
-                     <span class="folio-types">
-                       Social media design
-                     </span>
-                  </div>
-                    </div>
-                 </a>
-              </div>
-           </div> <!-- /folio-item -->
-
-           <div class="bgrid folio-item">
-                <div class="item-wrap">
-                 <img src="images\portfolio\gallery\Skatedeck_challenge.jpg" alt="dentiti baseball cap" class="lazyload">
-                   <a href="#modal-01" class="overlay">
-                      <div class="folio-item-table">
-                       <div class="folio-item-cell">
-                        <h3 class="folio-title">Skatedeck Challenge</h3>
-                        <span class="folio-types">
-                           Art direction and Graphic design
-                        </span>
-                    </div>
-                      </div>
-                   </a>
-                </div>
-             </div> <!-- /folio-item -->
-
-
-
-
-             <div class="bgrid folio-item">
-                <div class="item-wrap">
-                 <img src="images\portfolio\gallery\Schweppes.jpg"alt="hand holding glass of Schweppes" class="lazyload">
-                   <a href="#modal-02" class="overlay">
-                      <div class="folio-item-table">
-                       <div class="folio-item-cell">
-                         <h3 class="folio-title">Schweppes</h3>
-                       <span class="folio-types">
-                           Art Direction & Marketing Design
-                       </span>
-                    </div>
-                      </div>
-                   </a>
-                </div>
-             </div> <!-- /folio-item -->
-
-            <div class="bgrid folio-item">
-               <div class="item-wrap">
-                <img src="images\portfolio\gallery\selfie.jpg"alt="Dangote Pasta Pack ad" class="lazyload">
-                  <a href="#modal-03" class="overlay">
-                     <div class="folio-item-table">
-                      <div class="folio-item-cell">
-                        <h3 class="folio-title">Dangote Flour</h3>
-                      <span class="folio-types">
-                          Art Direction
-                      </span>
-                   </div>
-                     </div>
-                  </a>
-               </div>
-            </div> <!-- /folio-item -->
-
-            <!-- modal popups - begin
-            ============================================================= -->
-            <div id="modal-01" class="popup-modal slider mfp-hide">
-
-            <div class="media">
-              <img src="images/portfolio/modals/Skatedeck-m.png" alt="" />
-            </div>
-
-           <div class="description-box">
-              <h3>Skatedeck challenge</h3>
-              <p>A cross section designs I did combining my love for typography, grids and pop culture. Hope you enjoy these expressions...</p>
-
-              <div class="categories">Brand Identity, Apparel and Marketing Design</div>
-           </div>
-
-             <div class="link-box">
-                <a href="https://www.behance.net/gallery/97635239/Skate-Deck-Challenge-posters" target="_blank" rel="noopener">See Details</a>
-              <a href="#" class="popup-modal-dismiss">Close</a>
-             </div>
-
-         </div> <!-- /modal-02 -->
-
-         <div id="modal-02" class="popup-modal slider mfp-hide">
-
-         <div class="media">
-           <img src="images/portfolio/modals/schweppes-m.png" alt="" class="lazyload">
-         </div>
-
-         <div class="description-box">
-           <h3>Schweppes</h3>
-           <p>These are brand, product and marketing designs done for Schweppes Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
-
-           <div class="categories">Brand Identity, Apparel and Marketing Design</div>
-         </div>
-
-          <div class="link-box">
-             <a href="https://www.behance.net/gallery/111873105/Schweppes-Nigeria" target="_blank" rel="noopener">See Details</a>
-           <a href="#" class="popup-modal-dismiss">Close</a>
-          </div>
-
-        </div> <!-- /modal-02 -->
-
-
-         <div id="modal-03" class="popup-modal slider mfp-hide">
-
-            <div class="media">
-              <img src="images\portfolio\modals\dangote-selfie-m.jpg" alt="" class="lazyload">
-            </div>
-
-           <div class="description-box">
-              <h3>Dangote Flour</h3>
-              <p>Review of the designs i created as the art director on the team creating social media content for Dangote Flour's Social Media Account.</p>
-
-              <div class="categories">Art Direction</div>
-           </div>
-
-             <div class="link-box">
-                <a href="#" class="popup-modal-dismiss">See Details</a>
-              <a href="#" class="popup-modal-dismiss">Close</a>
-             </div>
-
-         </div> <!-- /modal-03 -->
-
-         <div id="modal-04" class="popup-modal slider mfp-hide">
-
-            <div class="media">
-              <img src="images\portfolio\modals\Budweiser-m.jpg" alt="budweiser label collage" class="lazyload">
-            </div>
-
-           <div class="description-box">
-              <h3>Budweiser</h3>
-              <p>These are brand, product and marketing designs done for Budweiser Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
-
-              <div class="categories">Brand, Product & Marketing Design</div>
-           </div>
-
-             <div class="link-box">
-                <a href="https://www.behance.net/gallery/94479803/Budweiser-Nigeria" target="_blank" rel="noopener">See Details</a>
-              <a href="#" class="popup-modal-dismiss">Close</a>
-             </div>
-
-         </div> <!-- /modal-04 -->
-
-         <div id="modal-05" class="popup-modal slider mfp-hide">
-
-            <div class="media">
-              <img src="images/portfolio/modals/OneBank-m.png" alt="OneBank_Flatlay" class="lazyload">
-            </div>
-
-           <div class="description-box">
-              <h3>OneBank</h3>
-              <p>These are brand, product and marketing designs done for OneBank. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
-
-              <div class="categories">Brand, Product & Marketing Design</div>
-           </div>
-
-             <div class="link-box">
-                <a href="#">See Details</a>
-              <a href="#" class="popup-modal-dismiss">Close</a>
-             </div>
-
-         </div> <!-- /modal-05 -->
-
-         <div id="modal-06" class="popup-modal slider mfp-hide">
-
-            <div class="media">
-              <img src="images\portfolio\modals\nivea-m.jpg" alt="flatlay" class="lazyload">
-            </div>
-
-           <div class="description-box">
-              <h3>Nivea</h3>
-              <p>A collection of Social Media designs and animations done for NIVEA MEN Nigeria's Facebook page.</p>
-
-              <div class="categories">Social Media Design</div>
-           </div>
-
-             <div class="link-box">
-                <a href="#" class="popup-modal-dismiss">See Details</a>
-              <a href="#" class="popup-modal-dismiss">Close</a>
-             </div>
-
-         </div> <!-- /modal-06 -->
-
-
-         <!-- modal popups - end
-            ============================================================= -->
-
-         </div> <!-- /portfolio-wrapper -->
-
-    </div>  <!-- /twelve -->
-
-  </div> <!-- /portfolio-content -->
-
-    </section>
-
-
-
-
-    <section id="contact" class="s-contact target-section">
-
-        <div class="overlay"></div>
-
-        <div class="row narrow section-intro">
-            <div class="col-full">
-                <h3>How might we work together?</h3>
-                <h1>Contact me.</h1>
-
-                <p style="text-align:center;" class="lead">I like to listen.</p>
-            </div>
-        </div>
-        <div class="row contact__main">
-          <div class="col-eight tab-full contact__form">
-            <h4 class="h06">Send me an email</h4>
-            <p><a href="mailto:me@dum3bi.com?bcc=dum3bi@gmail.com&subject=Nice%20meeting%20you%20Dumebi&body=Hi%20Dumebi%2C%0D%0A%0D%0A" target="_blank">me@dum3bi.com</a></p>
-          </div>
-          <div class="col-four tab-full contact__infos">
-            <h4 class="h06">Call me</h4>
-            <p><a href="tel:234 9065 71 2102">234-9065-71-2102</a></p>
-          </div>
-
-        </div>
-
-
-    </section> <!-- end s-contact -->
 
     <!-- footer
     ================================================== -->
@@ -441,7 +138,7 @@
             <div class="col-full">
 
                 <div class="footer-logo">
-                    <a class="footer-site-logo" href="#top"><img src="images\logo.svg" alt="Homepage"></a>
+                    <a class="footer-site-logo" href="#top"><img src="images/logo.svg" alt="Homepage"></a>
                 </div>
 
                 <ul class="footer-social">
@@ -449,9 +146,9 @@
                       <i class="im im-linkedin" aria-hidden="true"></i>
                       <span>Linkedin</span>
                   </a></li>
-                  <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
-                      <i class="im im-behance" aria-hidden="true"></i>
-                      <span>Behance</span>
+                  <li><a href="https://www.twitter.com/dum3bi" target="_blank" rel="noopener">
+                      <i class="im im-twitter" aria-hidden="true"></i>
+                      <span>twitter</span>
                   </a></li>
                     <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-github" aria-hidden="true"></i>
@@ -470,7 +167,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                  <div>Content © 2021 Dumebi Iwuchukwu 神は私の人生をリードします</div>
+                  <div>Content © 2022 Dumebi Iwuchukwu 神は私の人生をリードします</div>
                   <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Hosted on <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
                   <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                 </div>
@@ -540,17 +237,17 @@
     </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
-    <script>
+    <script src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
+    <script >
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-133301768-1');
     </script>
-  <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+  <script src="js/jquery-3.2.1.min.js" ></script>
+    <script src="js/plugins.js" ></script>
+    <script src="js/main.js" ></script>
     <script src="js/lazysizes.min.js"></script>
 
 
