--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 Head of Design at Big Cabal Media.<br>
-                 I lead teams that design brands, products, and experiences.
+                 Head of Design at Big Cabal Media.<br> </h1>
+                 <h2>I specialize in creative direction, and lead teams that design brands, products, and experiences.
                </h1>
              </div>
 
@@ -154,10 +154,7 @@
                         <i class="im im-github" aria-hidden="true"></i>
                         <span>Github</span>
                     </a></li>
-                    <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
-                        <i class="im im-instagram" aria-hidden="true"></i>
-                        <span>Instagram</span>
-                    </a></li>
+                    
                 </ul>
 
             </div>
