--- a/index.html
+++ b/index.html
@@ -105,13 +105,11 @@
             <div class="row home-content__main">
 
 
-
-
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 Head of Design at Big Cabal Media.<br> </h1>
-                 <h2>I specialize in creative direction, and lead teams that design brands, products, and experiences.
+                 Head of Design at <a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a>.<br> </h1>
+                 <h2>I specialize in creative direction, and lead teams that design brands, products, and experiences. I also mentor designer for free on <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener"> ADPlist.org</a>.
                </h1>
              </div>
 
@@ -154,7 +152,7 @@
                         <i class="im im-github" aria-hidden="true"></i>
                         <span>Github</span>
                     </a></li>
-                    
+
                 </ul>
 
             </div>
