--- a/Empowering_Local_Design_Talent.html
+++ b/Empowering_Local_Design_Talent.html
@@ -11,7 +11,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-     <title>About | Dumebi Iwuchukwu</title>
+     <title>Talk | Dumebi Iwuchukwu</title>
      <meta name="description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
      <meta name="theme-color" content="#9849b1"/>
 
@@ -96,42 +96,65 @@
         <div class="row blog-content">
             <div class="col-full blog-content__main">
 
-              <h1 class="page-header__title">
-                      About
-              </h1>
+              <article class="col-full">
 
-              <div>
-                  <p><img src="images/hero-bg.jpg" alt="Dumebi iwuchukwu picture"></p>
-              </div>
+                <h1 class="page-header__title">
+                        How To Grow & Empower Local Design Talent
+                </h1>
+                <p> January 12, 2022</p>
+
+
+
+
+
 
               <div >
-              <h3><b>Dumebi (Du-may-be) Nnadirinwa Iwuchukwu</b> is the Head of Design at <a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a> where he leads a team of Brand and Product designers.</h3><br>
+              <h3>With the competitive global jobs market, many local talents are lost to international organisations. But with a growing design community, how can you harness homegrown talent and retain them for local organizations?</h3><br>
               </div>
 
 
               <div >
 
               </div>
-
                       <div>
 
-                         <p>He has been working in design for about 10 years now with experience in Brand, Product and Marketing Design. <br /></p> <br>
-                         <p>During his design journey, he've had the privilege of creating enabling experiences for people with brands like Google, Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
-                         <p>Teaching and mentorship has always been a huge part of his career as a designer and you can book a free mentorship session with him on <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews.</p><br>
-                         <p>You can check out his work <a href="/portfolio.html">here</a>.</p>
+                         <p>In this talk, presented at <a href="https://uxdx.com/session/how-to-grow-empower-local-design-talent/" target="_blank" rel="noopener">UXDX Africa Conference 2022</a>, I  discussed different strategies to empower homegrown design talent. Focusing on the importance of bootcamps and mentoring, I touched on:</p>
+                        <ul>
+                             <li>The strength of the local talent on the technical aspects of design (using tools);</li>
+                             <li>The lack of understanding of methodologies and design thinking and how you can improve this in your organization through trainings and mentoring; and,</li>
+                             <li>The future of young designers in Africa.</li>
+                         </ul>
 
-                         <h3>How To Grow & Empower Local Design Talent | UXDX Africa Conference 2022</h3>
+
                          <div class="video-container">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/fQ-VK3SEn5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                          </div>
 
-                          <p>
-                            In this talk, Dumebi discussed different strategies to empower homegrown design talent. Focusing on the importance of bootcamps and mentoring, he will touch on:
-- The strength of the local talent on the technical aspects of design (using tools);
-- The lack of understanding of methodologies and design thinking and how you can improve this in your organization through trainings and mentoring; and
-- The future of young designers in Africa
-                          </p>
+
                       </div>
+                      <div class="blog-content__pagenav">
+                          <div class="blog-content__nav">
+                              <div class="blog-content__prev">
+                                  <a href="#0" rel="prev">
+                                      <span>Previous Post</span>
+                                      Tips on Minimalist Design
+                                  </a>
+                              </div>
+                              <div class="blog-content__next">
+                                  <a href="#0" rel="next">
+                                      <span>Next Post</span>
+                                      Less Is More
+                                  </a>
+                              </div>
+                          </div>
+
+                          <div class="blog-content__all">
+                              <a href="blog.html" class="btn btn--primary">
+                                  View All Posts
+                              </a>
+                          </div>
+                      </div>
+
 
               </div>
 
@@ -140,7 +163,7 @@
 
 
             </div><!-- end blog-content__main -->
-
+</article>
 
 
 
