--- a/Empowering_Local_Design_Talent.html
+++ b/Empowering_Local_Design_Talent.html
@@ -103,10 +103,7 @@
                 </h1>
                 <p> January 12, 2022</p>
 
-
-
-
-
+              <hr>
 
               <div >
               <h3>With the competitive global jobs market, many local talents are lost to international organisations. But with a growing design community, how can you harness homegrown talent and retain them for local organizations?</h3><br>
@@ -118,7 +115,7 @@
               </div>
                       <div>
 
-                         <p>In this talk, presented at <a href="https://uxdx.com/session/how-to-grow-empower-local-design-talent/" target="_blank" rel="noopener">UXDX Africa Conference 2022</a>, I  discussed different strategies to empower homegrown design talent. Focusing on the importance of bootcamps and mentoring, I touched on:</p>
+                         <p>In this talk, presented at <a href="https://uxdx.com/session/how-to-grow-empower-local-design-talent/" target="_blank" rel="noopener">UXDX Community Africa 2022</a>, I  discussed different strategies to empower homegrown design talent. Focusing on the importance of bootcamps and mentoring, I touched on:</p>
                         <ul>
                              <li>The strength of the local talent on the technical aspects of design (using tools);</li>
                              <li>The lack of understanding of methodologies and design thinking and how you can improve this in your organization through trainings and mentoring; and,</li>
