--- a/me.html
+++ b/me.html
@@ -120,26 +120,16 @@
                          <p>Teaching and mentorship has always been a huge part of his career as a designer and you can book a free mentorship session with him on <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews.</p><br>
                          <p>You can check out his work <a href="/portfolio.html">here</a>.</p>
 
-                         <h3>How To Grow & Empower Local Design Talent | UXDX Africa Conference 2022</h3>
-                         <div class="video-container">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/fQ-VK3SEn5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                         </div>
 
-                          <p>
-                            In this talk, Dumebi discussed different strategies to empower homegrown design talent. Focusing on the importance of bootcamps and mentoring, he will touch on:
-- The strength of the local talent on the technical aspects of design (using tools);
-- The lack of understanding of methodologies and design thinking and how you can improve this in your organization through trainings and mentoring; and
-- The future of young designers in Africa
-                          </p>
                       </div>
-
+                      <h1>
+                      <a href="/résumé.html" class=" btn btn--primary">Résumé</a> <a href="/portfolio.html" class=" btn btn--primary">Projects</a>
+                      <h1>
               </div>
 
-
-
-
-
             </div><!-- end blog-content__main -->
+
+
 
 
 
