--- a/Empowering_Local_Design_Talent.html
+++ b/Empowering_Local_Design_Talent.html
@@ -74,9 +74,10 @@
         <nav class="header-nav-wrap">
             <ul class="header-nav">
                 <li><a href="index.html" title="home">Home</a></li>
-                <li class="current"><a href="#" title="about">About</a></li>
-                <li><a href="portfolio.html" title="works">Work</a></li>
-                <li><a href="scrapbook.html" title="scrapbook">Scrapbook</a></li>
+                <li ><a href="/me.html" title="about">About</a></li>
+                <li><a href="/portfolio.html" title="works">Work</a></li>
+                <li><a href="/scrapbook.html" title="scrapbook">Scrapbook</a></li>
+                <li ><a href="/résumé.html" title="Résumé">Résumé</a></li>
                 <li><a   href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
 
             </ul>
@@ -127,7 +128,9 @@
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/fQ-VK3SEn5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                          </div>
 
-
+                         <p>
+                            Get the slides <a href="https://www.figma.com/proto/m49b97bywJo6ZNf3gZIAQT/How-To-Grow-%26-Empower-Local-Design-Talent?page-id=0%3A1&node-id=1%3A87&scaling=scale-down" target="_blank" rel="noopener">here</a>.
+                          </p>
                       </div>
                       <div class="blog-content__pagenav">
                           <div class="blog-content__nav">
