--- a/scrapbook.html
+++ b/scrapbook.html
@@ -82,6 +82,7 @@
                 <li><a href="me.html"  title="about">About</a></li>
                 <li><a href="portfolio.html" title="works">Work</a></li>
                 <li class="current"><a href="#" title="scrapbook">Scrapbook</a></li>
+                <li ><a href="/résumé.html" title="Résumé">Résumé</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
         </nav>
@@ -267,7 +268,7 @@
                       <i class="im im-github" aria-hidden="true"></i>
                       <span>Github</span>
                   </a></li>
-                  
+
               </ul>
 
           </div>
