--- a/me.html
+++ b/me.html
@@ -77,6 +77,7 @@
                 <li class="current"><a href="#" title="about">About</a></li>
                 <li><a href="portfolio.html" title="works">Work</a></li>
                 <li><a href="scrapbook.html" title="scrapbook">Scrapbook</a></li>
+                <li ><a href="/résumé.html" title="Résumé">Résumé</a></li>
                 <li><a   href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
 
             </ul>
