--- a/me.html
+++ b/me.html
@@ -117,7 +117,7 @@
                       <div>
 
                          <p>He has been working in design for about 10 years now with experience in Brand, Product and Marketing Design. <br /></p> <br>
-                         <p>During his design journey, he've had the privilege of creating enabling experiences for people with brands like Google, Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
+                         <p>During his design journey, he's had the privilege of creating enabling experiences for people with brands like Google, Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
                          <p>Teaching and mentorship has always been a huge part of his career as a designer and you can book a free mentorship session with him on <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews.</p><br>
 
 
