--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 Head of Design at <a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a>.<br> </h1>
-                 <h2>I specialize in creative direction, and lead teams that design brands, products, and experiences. I also mentor designers for free on <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener"> ADPlist.org</a>.
+                 Head of Design at Big Cabal Media<br> </h1>
+                 <h2>I specialize in creative direction, and lead teams that design brands, products, and experiences.
                </h1>
              </div>
 
