--- a/me.html
+++ b/me.html
@@ -106,7 +106,7 @@
               </div>
 
               <div >
-              <h3><b>Dumebi (Du-may-be) Nnadirinwa Iwuchukwu</b> is the Head of Design at <a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a> where he leads a team of Brand and Product designers.</h3><br>
+              <h3><b>Dumebi (Du-may-be) Nnadirinwa Iwuchukwu</b> is the Head of Design at Big Cabal Media where he leads a team of Brand and Product designers. Previously, He was an Art Director at Webcoupers and before that, at Isobar. He also taught Art direction at 02 Academy Lagos.</h3><br>
               </div>
 
 
@@ -118,7 +118,7 @@
 
                          <p>He has been working in design for about 10 years now with experience in Brand, Product and Marketing Design. <br /></p> <br>
                          <p>During his design journey, he's had the privilege of creating enabling experiences for people with brands like Google, Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
-                         <p>Teaching and mentorship has always been a huge part of his career as a designer and you can book a free mentorship session with him on <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews.</p><br>
+                         <p>Teaching and mentorship has always been a huge part of his career as a designer and He mentors designers for free at <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">ADPlist.org</a>.</p><br>
 
 
 
